<resources>
    <string name="app_name">Simple Habit Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo">Todo</string>
    <string name="reward">Reward</string>
    <string name="setting">Setting</string>
    <string name="CheckList">Checklist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="datetime_format">%s, %s</string>
    <string name="default_time">00:00</string>
    <string name="delete_task">Delete</string>
    <string name="skip_task">Skip</string>
    <string name="done">Done</string>
    <string name="select_your_action">Select your action?</string>
    <string name="edit_task">Edit Task</string>
    <string name="total">Total</string>
    <string name="claim">Claim</string>
    <string name="edit">Edit</string>
    <string name="reset_all">Reset All</string>
    <string name="iconuser">Icon User</string>
    <string name="name">Name</string>
    <string name="add_new_user">Add New User</string>
    <string name="username">Username</string>
    <string name="exp">Exp</string>
    <string-array name="exp_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>300</item>
    </string-array>
    <string-array name="type_options">
        <item>Repeat</item>
        <item>Once</item>
        <!--        <item>Certain</item>-->
    </string-array>
</resources>