<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleDialog"
            android:layout_margin="10dp"
            android:fontFamily="@font/kreon"
            android:text="@string/select_your_action"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="2"
        android:text="@string/edit_task"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_orange_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:text="@string/delete_task"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/errorColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:text="@string/skip_task"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:text="@string/done"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/holo_green_dark" />
    </LinearLayout>
</LinearLayout>